// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StafferPage renders html correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    fetchStafferOptions={[Function]}
    fromEditCourse={Object {}}
    stafferInfo={Object {}}
    stafferOptions={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              fromEditCourse={Object {}}
              id="create-staffer-form"
              isCreateForm={true}
              onSubmit={[Function]}
              stafferOptions={Object {}}
            />
            
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                onSubmit={[Function]}
                stafferOptions={Object {}}
              />
              
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                undefined,
                <hr />,
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  onSubmit={[Function]}
                  stafferOptions={Object {}}
                />,
                undefined,
                "",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "fromEditCourse": Object {},
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": undefined,
                  "onSubmit": [Function],
                  "stafferOptions": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              undefined,
              "",
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                onSubmit={[Function]}
                stafferOptions={Object {}}
              />
              
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  onSubmit={[Function]}
                  stafferOptions={Object {}}
                />
                
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  undefined,
                  <hr />,
                  <ReduxForm
                    fromEditCourse={Object {}}
                    id="create-staffer-form"
                    isCreateForm={true}
                    onSubmit={[Function]}
                    stafferOptions={Object {}}
                  />,
                  undefined,
                  "",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "fromEditCourse": Object {},
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": undefined,
                    "onSubmit": [Function],
                    "stafferOptions": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                undefined,
                "",
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly while creating 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    fetchStafferOptions={[Function]}
    fromEditCourse={Object {}}
    stafferInfo={
      Object {
        "error": null,
        "isSaving": true,
      }
    }
    stafferOptions={
      Object {
        "data": Object {},
        "error": null,
        "isFetching": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              fromEditCourse={Object {}}
              id="create-staffer-form"
              isCreateForm={true}
              isSaving={true}
              onSubmit={[Function]}
              stafferOptions={
                Object {
                  "data": Object {},
                  "error": null,
                  "isFetching": false,
                }
              }
            />
            <LoadingSpinner
              message="Saving instructor"
            />
            
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={true}
                onSubmit={[Function]}
                stafferOptions={
                  Object {
                    "data": Object {},
                    "error": null,
                    "isFetching": false,
                  }
                }
              />
              <LoadingSpinner
                message="Saving instructor"
              />
              
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                undefined,
                <hr />,
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={true}
                  onSubmit={[Function]}
                  stafferOptions={
                    Object {
                      "data": Object {},
                      "error": null,
                      "isFetching": false,
                    }
                  }
                />,
                <LoadingSpinner
                  message="Saving instructor"
                />,
                "",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "fromEditCourse": Object {},
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": true,
                  "onSubmit": [Function],
                  "stafferOptions": Object {
                    "data": Object {},
                    "error": null,
                    "isFetching": false,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "message": "Saving instructor",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "",
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={true}
                onSubmit={[Function]}
                stafferOptions={
                  Object {
                    "data": Object {},
                    "error": null,
                    "isFetching": false,
                  }
                }
              />
              <LoadingSpinner
                message="Saving instructor"
              />
              
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={true}
                  onSubmit={[Function]}
                  stafferOptions={
                    Object {
                      "data": Object {},
                      "error": null,
                      "isFetching": false,
                    }
                  }
                />
                <LoadingSpinner
                  message="Saving instructor"
                />
                
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  undefined,
                  <hr />,
                  <ReduxForm
                    fromEditCourse={Object {}}
                    id="create-staffer-form"
                    isCreateForm={true}
                    isSaving={true}
                    onSubmit={[Function]}
                    stafferOptions={
                      Object {
                        "data": Object {},
                        "error": null,
                        "isFetching": false,
                      }
                    }
                  />,
                  <LoadingSpinner
                    message="Saving instructor"
                  />,
                  "",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "fromEditCourse": Object {},
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": true,
                    "onSubmit": [Function],
                    "stafferOptions": Object {
                      "data": Object {},
                      "error": null,
                      "isFetching": false,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "message": "Saving instructor",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "",
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly while fetching 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    fetchStafferOptions={[Function]}
    fromEditCourse={Object {}}
    stafferInfo={
      Object {
        "error": null,
        "isSaving": false,
      }
    }
    stafferOptions={
      Object {
        "data": Object {},
        "error": null,
        "isFetching": true,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <LoadingSpinner
            message="Loading…"
          />
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <LoadingSpinner
              message="Loading…"
            />,
            false,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "message": "Loading…",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <LoadingSpinner
              message="Loading…"
            />
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <LoadingSpinner
                message="Loading…"
              />,
              false,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "message": "Loading…",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly with no stafferInfo 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    fetchStafferOptions={[Function]}
    fromEditCourse={Object {}}
    stafferInfo={null}
    stafferOptions={
      Object {
        "data": Object {},
        "error": null,
        "isFetching": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "alertType": "danger",
      "className": Array [],
      "dismissible": false,
      "iconClassNames": Array [],
      "id": "error",
      "message": "Could not get instructor information",
      "onClose": [Function],
      "title": "Could not load page",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "alertType": "danger",
        "className": Array [],
        "dismissible": false,
        "iconClassNames": Array [],
        "id": "error",
        "message": "Could not get instructor information",
        "onClose": [Function],
        "title": "Could not load page",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly with no stafferOptions 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    fetchStafferOptions={[Function]}
    fromEditCourse={Object {}}
    stafferInfo={
      Object {
        "error": null,
        "isSaving": false,
      }
    }
    stafferOptions={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "alertType": "danger",
      "className": Array [],
      "dismissible": false,
      "iconClassNames": Array [],
      "id": "error",
      "message": "Could not get instructor information",
      "onClose": [Function],
      "title": "Could not load page",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "alertType": "danger",
        "className": Array [],
        "dismissible": false,
        "iconClassNames": Array [],
        "id": "error",
        "message": "Could not get instructor information",
        "onClose": [Function],
        "title": "Could not load page",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly with staffer info error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    fetchStafferOptions={[Function]}
    fromEditCourse={Object {}}
    stafferInfo={
      Object {
        "error": "Fail",
        "isSaving": false,
      }
    }
    stafferOptions={
      Object {
        "data": Object {},
        "error": null,
        "isFetching": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              fromEditCourse={Object {}}
              id="create-staffer-form"
              isCreateForm={true}
              isSaving={false}
              onSubmit={[Function]}
              stafferOptions={
                Object {
                  "data": Object {},
                  "error": null,
                  "isFetching": false,
                }
              }
            />
            <StatusAlert
              alertType="danger"
              className={Array []}
              dismissible={false}
              iconClassNames={Array []}
              id="create-staffer-error"
              message="Fail"
              onClose={[Function]}
              title="Could not save instructor"
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={false}
                onSubmit={[Function]}
                stafferOptions={
                  Object {
                    "data": Object {},
                    "error": null,
                    "isFetching": false,
                  }
                }
              />
              <StatusAlert
                alertType="danger"
                className={Array []}
                dismissible={false}
                iconClassNames={Array []}
                id="create-staffer-error"
                message="Fail"
                onClose={[Function]}
                title="Could not save instructor"
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                undefined,
                <hr />,
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={false}
                  onSubmit={[Function]}
                  stafferOptions={
                    Object {
                      "data": Object {},
                      "error": null,
                      "isFetching": false,
                    }
                  }
                />,
                false,
                <StatusAlert
                  alertType="danger"
                  className={Array []}
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-staffer-error"
                  message="Fail"
                  onClose={[Function]}
                  title="Could not save instructor"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "fromEditCourse": Object {},
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": false,
                  "onSubmit": [Function],
                  "stafferOptions": Object {
                    "data": Object {},
                    "error": null,
                    "isFetching": false,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alertType": "danger",
                  "className": Array [],
                  "dismissible": false,
                  "iconClassNames": Array [],
                  "id": "create-staffer-error",
                  "message": "Fail",
                  "onClose": [Function],
                  "title": "Could not save instructor",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={false}
                onSubmit={[Function]}
                stafferOptions={
                  Object {
                    "data": Object {},
                    "error": null,
                    "isFetching": false,
                  }
                }
              />
              <StatusAlert
                alertType="danger"
                className={Array []}
                dismissible={false}
                iconClassNames={Array []}
                id="create-staffer-error"
                message="Fail"
                onClose={[Function]}
                title="Could not save instructor"
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={false}
                  onSubmit={[Function]}
                  stafferOptions={
                    Object {
                      "data": Object {},
                      "error": null,
                      "isFetching": false,
                    }
                  }
                />
                <StatusAlert
                  alertType="danger"
                  className={Array []}
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-staffer-error"
                  message="Fail"
                  onClose={[Function]}
                  title="Could not save instructor"
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  undefined,
                  <hr />,
                  <ReduxForm
                    fromEditCourse={Object {}}
                    id="create-staffer-form"
                    isCreateForm={true}
                    isSaving={false}
                    onSubmit={[Function]}
                    stafferOptions={
                      Object {
                        "data": Object {},
                        "error": null,
                        "isFetching": false,
                      }
                    }
                  />,
                  false,
                  <StatusAlert
                    alertType="danger"
                    className={Array []}
                    dismissible={false}
                    iconClassNames={Array []}
                    id="create-staffer-error"
                    message="Fail"
                    onClose={[Function]}
                    title="Could not save instructor"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "fromEditCourse": Object {},
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": false,
                    "onSubmit": [Function],
                    "stafferOptions": Object {
                      "data": Object {},
                      "error": null,
                      "isFetching": false,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "alertType": "danger",
                    "className": Array [],
                    "dismissible": false,
                    "iconClassNames": Array [],
                    "id": "create-staffer-error",
                    "message": "Fail",
                    "onClose": [Function],
                    "title": "Could not save instructor",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly with staffer info error and staffer options error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    fetchStafferOptions={[Function]}
    fromEditCourse={Object {}}
    stafferInfo={
      Object {
        "error": "Fail here too",
        "isSaving": false,
      }
    }
    stafferOptions={
      Object {
        "data": Object {},
        "error": "Fail",
        "isFetching": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              fromEditCourse={Object {}}
              id="create-staffer-form"
              isCreateForm={true}
              isSaving={false}
              onSubmit={[Function]}
              stafferOptions={
                Object {
                  "data": Object {},
                  "error": "Fail",
                  "isFetching": false,
                }
              }
            />
            <StatusAlert
              alertType="danger"
              className={Array []}
              dismissible={false}
              iconClassNames={Array []}
              id="create-staffer-error"
              message="Fail here too Fail"
              onClose={[Function]}
              title="Could not save instructor"
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={false}
                onSubmit={[Function]}
                stafferOptions={
                  Object {
                    "data": Object {},
                    "error": "Fail",
                    "isFetching": false,
                  }
                }
              />
              <StatusAlert
                alertType="danger"
                className={Array []}
                dismissible={false}
                iconClassNames={Array []}
                id="create-staffer-error"
                message="Fail here too Fail"
                onClose={[Function]}
                title="Could not save instructor"
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                undefined,
                <hr />,
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={false}
                  onSubmit={[Function]}
                  stafferOptions={
                    Object {
                      "data": Object {},
                      "error": "Fail",
                      "isFetching": false,
                    }
                  }
                />,
                false,
                <StatusAlert
                  alertType="danger"
                  className={Array []}
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-staffer-error"
                  message="Fail here too Fail"
                  onClose={[Function]}
                  title="Could not save instructor"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "fromEditCourse": Object {},
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": false,
                  "onSubmit": [Function],
                  "stafferOptions": Object {
                    "data": Object {},
                    "error": "Fail",
                    "isFetching": false,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alertType": "danger",
                  "className": Array [],
                  "dismissible": false,
                  "iconClassNames": Array [],
                  "id": "create-staffer-error",
                  "message": "Fail here too Fail",
                  "onClose": [Function],
                  "title": "Could not save instructor",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={false}
                onSubmit={[Function]}
                stafferOptions={
                  Object {
                    "data": Object {},
                    "error": "Fail",
                    "isFetching": false,
                  }
                }
              />
              <StatusAlert
                alertType="danger"
                className={Array []}
                dismissible={false}
                iconClassNames={Array []}
                id="create-staffer-error"
                message="Fail here too Fail"
                onClose={[Function]}
                title="Could not save instructor"
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={false}
                  onSubmit={[Function]}
                  stafferOptions={
                    Object {
                      "data": Object {},
                      "error": "Fail",
                      "isFetching": false,
                    }
                  }
                />
                <StatusAlert
                  alertType="danger"
                  className={Array []}
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-staffer-error"
                  message="Fail here too Fail"
                  onClose={[Function]}
                  title="Could not save instructor"
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  undefined,
                  <hr />,
                  <ReduxForm
                    fromEditCourse={Object {}}
                    id="create-staffer-form"
                    isCreateForm={true}
                    isSaving={false}
                    onSubmit={[Function]}
                    stafferOptions={
                      Object {
                        "data": Object {},
                        "error": "Fail",
                        "isFetching": false,
                      }
                    }
                  />,
                  false,
                  <StatusAlert
                    alertType="danger"
                    className={Array []}
                    dismissible={false}
                    iconClassNames={Array []}
                    id="create-staffer-error"
                    message="Fail here too Fail"
                    onClose={[Function]}
                    title="Could not save instructor"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "fromEditCourse": Object {},
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": false,
                    "onSubmit": [Function],
                    "stafferOptions": Object {
                      "data": Object {},
                      "error": "Fail",
                      "isFetching": false,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "alertType": "danger",
                    "className": Array [],
                    "dismissible": false,
                    "iconClassNames": Array [],
                    "id": "create-staffer-error",
                    "message": "Fail here too Fail",
                    "onClose": [Function],
                    "title": "Could not save instructor",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly with staffer options error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    fetchStafferOptions={[Function]}
    fromEditCourse={Object {}}
    stafferInfo={
      Object {
        "error": null,
        "isSaving": false,
      }
    }
    stafferOptions={
      Object {
        "data": Object {},
        "error": "Fail",
        "isFetching": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              fromEditCourse={Object {}}
              id="create-staffer-form"
              isCreateForm={true}
              isSaving={false}
              onSubmit={[Function]}
              stafferOptions={
                Object {
                  "data": Object {},
                  "error": "Fail",
                  "isFetching": false,
                }
              }
            />
            <StatusAlert
              alertType="danger"
              className={Array []}
              dismissible={false}
              iconClassNames={Array []}
              id="create-staffer-error"
              message="Fail"
              onClose={[Function]}
              title="Could not save instructor"
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={false}
                onSubmit={[Function]}
                stafferOptions={
                  Object {
                    "data": Object {},
                    "error": "Fail",
                    "isFetching": false,
                  }
                }
              />
              <StatusAlert
                alertType="danger"
                className={Array []}
                dismissible={false}
                iconClassNames={Array []}
                id="create-staffer-error"
                message="Fail"
                onClose={[Function]}
                title="Could not save instructor"
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                undefined,
                <hr />,
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={false}
                  onSubmit={[Function]}
                  stafferOptions={
                    Object {
                      "data": Object {},
                      "error": "Fail",
                      "isFetching": false,
                    }
                  }
                />,
                false,
                <StatusAlert
                  alertType="danger"
                  className={Array []}
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-staffer-error"
                  message="Fail"
                  onClose={[Function]}
                  title="Could not save instructor"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "fromEditCourse": Object {},
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": false,
                  "onSubmit": [Function],
                  "stafferOptions": Object {
                    "data": Object {},
                    "error": "Fail",
                    "isFetching": false,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alertType": "danger",
                  "className": Array [],
                  "dismissible": false,
                  "iconClassNames": Array [],
                  "id": "create-staffer-error",
                  "message": "Fail",
                  "onClose": [Function],
                  "title": "Could not save instructor",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                fromEditCourse={Object {}}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={false}
                onSubmit={[Function]}
                stafferOptions={
                  Object {
                    "data": Object {},
                    "error": "Fail",
                    "isFetching": false,
                  }
                }
              />
              <StatusAlert
                alertType="danger"
                className={Array []}
                dismissible={false}
                iconClassNames={Array []}
                id="create-staffer-error"
                message="Fail"
                onClose={[Function]}
                title="Could not save instructor"
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  fromEditCourse={Object {}}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={false}
                  onSubmit={[Function]}
                  stafferOptions={
                    Object {
                      "data": Object {},
                      "error": "Fail",
                      "isFetching": false,
                    }
                  }
                />
                <StatusAlert
                  alertType="danger"
                  className={Array []}
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-staffer-error"
                  message="Fail"
                  onClose={[Function]}
                  title="Could not save instructor"
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  undefined,
                  <hr />,
                  <ReduxForm
                    fromEditCourse={Object {}}
                    id="create-staffer-form"
                    isCreateForm={true}
                    isSaving={false}
                    onSubmit={[Function]}
                    stafferOptions={
                      Object {
                        "data": Object {},
                        "error": "Fail",
                        "isFetching": false,
                      }
                    }
                  />,
                  false,
                  <StatusAlert
                    alertType="danger"
                    className={Array []}
                    dismissible={false}
                    iconClassNames={Array []}
                    id="create-staffer-error"
                    message="Fail"
                    onClose={[Function]}
                    title="Could not save instructor"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "fromEditCourse": Object {},
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": false,
                    "onSubmit": [Function],
                    "stafferOptions": Object {
                      "data": Object {},
                      "error": "Fail",
                      "isFetching": false,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "alertType": "danger",
                    "className": Array [],
                    "dismissible": false,
                    "iconClassNames": Array [],
                    "id": "create-staffer-error",
                    "message": "Fail",
                    "onClose": [Function],
                    "title": "Could not save instructor",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
